@@ -5,7 +5,7 @@
       <input type="hidden" id="newEdgeDefinitions<%= number%>" value="" placeholder="Edge definitions" tabindex="-1" class="select2-offscreen">
       <button id="remove_newEdgeDefinitions<%= number%>" class="graphViewer-icon-button gv_internal_remove_line gv-icon-small delete"></button>
     </th><th>
-    <span class="modalTooltips arangoicon icon_arangodb_info" title="Some info for edge definitions">
+    <span class="modalTooltips arangoicon icon_arangodb_info" title="An edge definition defines a relation of the graph">
     </span>
     </th>
   </tr>
