@@ -1,6 +1,8 @@
 devel
 -----
 
+* UI: edge collections were wrongly added to from and to vertices select box during graph creation
+
 * fixed issue #3640: limit in subquery
 
 * UI: the graph viewer now displays updated label values correctly.
